--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fire": "git add . && git commit --amend --no-edit && git push -f && npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
